--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-swiper": "^1.6.0",
+    "react-native-typing-animation": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7"
   },
