--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^0.28.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-swiper": "^1.6.0",
     "react-native-typing-animation": "^0.1.7",
