--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-ionicons": "^5.0.0-rc",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.9.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-svg": "^12.1.0",
     "react-native-swipe-hidden-header": "^0.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-typing-animation": "^0.1.7",
