--- a/package.json
+++ b/package.json
@@ -10,23 +10,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
     "firebase": "^7.14.0",
+    "message": "0.0.1",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.0",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-ionicons": "^5.0.0-rc",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
     "react-native-swipe-hidden-header": "^0.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-typing-animation": "^0.1.7",
-    "react-navigation": "^4.3.7"
+    "react-navigation-stack": "^2.8.2",
+    "react-navigation-tabs": "^2.9.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
@@ -37,6 +50,7 @@
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.4.0",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
